--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <a href="" class="footer_social-link">
             <img
               src="./images/yt.svg"
-              alt="YouTube"
+              alt="Ссылка на YouTube"
               class="footer_social-icon"
             />
           </a>
@@ -182,7 +182,7 @@
           <a href="" class="footer_social-link">
             <img
               src="./images/vk.svg"
-              alt="ВКонтакте"
+              alt="Ссылка на ВКонтакте"
               class="footer_social-icon"
             />
           </a>
@@ -191,7 +191,7 @@
           <a href="" class="footer_social-link">
             <img
               src="./images/pinterest.svg"
-              alt="Pinterest"
+              alt="Ссылка на Pinterest"
               class="footer_social-icon"
             />
           </a>
