--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <a href="" class="header_logo">
         <img
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Черный логотип"
           class="header_logo-image"
         />
@@ -51,7 +51,7 @@
             <span class="word-spacing-accent">в которые</span>
             <span class="word-spacin-accent">никто не</span> верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
       </section>
@@ -62,9 +62,7 @@
             <a href="" class="card-link">
               <article class="card card_type_film">
                 <h3 class="card_title">
-                  <span class="underline">
-                    Фильм режиссёра, который бросил киношколу
-                  </span>
+                  Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card_text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
@@ -79,10 +77,8 @@
             <a href="" class="card-link">
               <article class="card card_type_book">
                 <h3 class="card_title">
-                  <span class="underline">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
-                  </span>
                 </h3>
                 <p class="card_text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
@@ -100,9 +96,7 @@
             <a href="" class="card-link">
               <article class="card card_type_picture">
                 <h3 class="card_title">
-                  <span class="underline">
                     Картина, которую повторит даже 5-летний сын маминой подруги
-                  </span>
                 </h3>
                 <p class="card_text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
@@ -128,17 +122,17 @@
         </div>
         <h3 class="about_title">Об аукционе</h3>
         <div class="about_text">
-          <p class="about_text-paragraph1">
+          <p class="about_text-paragraph-smaller">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <p class="about_text-paragraph2">
+          <p class="about_text-paragraph-bigger">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br />на
+            Когда-то они казались просто неудачными. Но, несмотря на
             критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно представить современную культуру. Когда в эти вещи не
             верил никто, продолжали верить их создатели. И сейчас эти лоты стали
